NOTES:
   type_attr cannot be 'class'
   opera bug (event.pageY) when dragging and scrolling
   Firefox 2 slows down when too many nested nodes (over 10 levels) (because of floated "a")
   xml_flat in async mode - do not set parent_id
   onopen callback in async mode is fired AFTER the content has loaded and displayed

TODO:
   FEAT: multitree (multiple instances with communication)
     * drag rules (maybe with a common rules object and tree IDs)
     * language cleanup (Claudio & Gregory)
   FEAT: native undo/redo (Rafi B)
   FEAT: tree focus (use bogdan's solution)
   DOCS: background customization
   DOCS: examples & functions

CHANGELOG:
 v.0.8.2 
   get_* functions receive a "force" argument that selects the node even if hover_mode is on
   create function enhancement - can pass a node to create in (by anotherhero)
   remove function enhancement - can pass a node to delete (by anotherhero)
   fixed drag position in IE (by Nuno Mota)
   fixed multitree drag rules check against origin tree (by bogdan)
   implemented drag-to-copy - changes the default behaviour from drag to copy, to activate:
     - set settings.rules.drag_copy to "ctrl" and drop the dragged nodes with the ctrlKey down
     - set settings.rules.drag_copy to "on"
 v.0.8.1
   fixed renaming bug (by anotherhero)
   fixed #marker bug (by anotherhero)
 v.0.8
   onload callback - fired when:
    - the tree is loaded for the first time
    - the tree or a node is refreshed
   * in dragrules
   refreshing a single node is possible (in async mode)
   passed json can now be an object, not an array of objects (by Marius Bratu)
   onchange called in deselect_branch (by jstreeuser)
   id is urlencoded (by Arjan Haverkamp)
 v.0.7.1
   fixed create bug in async mode (by William)
   create function returns the created node (by Nuno Mota)
   fixed bug when dropped node did not open branch in async mode (by William)
   fixed bug when passing empty array as children (by William)